Regression: Video in node group doesn't play #99932

Closed
opened 2022-07-23 18:17:25 +02:00 by Joey Carlino · 15 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.76

Blender Version
Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-07-22 21:12, hash: 82467e5dcf
Worked: 3.1.2

Caused by f517b3a295

Short description of error
image texture videos don't play while in a node group

Exact steps for others to reproduce the error

  • add a mesh (plane)
  • add new material
  • add image texture node and plug into surface output
  • choose a video file
  • put it into a node group
    It should stop playing at this point.
    If there is another image texture using the same video OUTSIDE the group at the same time, the video from the group still works. It will break as soon as the outside image texture is deleted.
**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.76 **Blender Version** Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-07-22 21:12, hash: `82467e5dcf` Worked: 3.1.2 Caused by f517b3a295 **Short description of error** image texture videos don't play while in a node group **Exact steps for others to reproduce the error** - add a mesh (plane) - add new material - add image texture node and plug into surface output - choose a video file - put it into a node group It should stop playing at this point. If there is another image texture using the same video OUTSIDE the group at the same time, the video from the group still works. It will break as soon as the outside image texture is deleted.
Author

Added subscriber: @JoeyC

Added subscriber: @JoeyC

#100283 was marked as duplicate of this issue

#100283 was marked as duplicate of this issue
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Added subscriber: @fclem

Added subscriber: @fclem
Member

Introduced between 8c4bd02b06 - ae2d2c9361
I don't use full builds so can't really bisect. But I suspect one of the Clemet's commit has caused this
cc @fclem (Feel free to unsubscribe if you're not responsible for this issue :) )

Introduced between 8c4bd02b067a - ae2d2c936161 I don't use full builds so can't really bisect. But I suspect one of the Clemet's commit has caused this cc @fclem (Feel free to unsubscribe if you're not responsible for this issue :) )
Pratik Borhade changed title from Video in node group doesn't play to Regression: Video in node group doesn't play 2022-07-25 03:25:30 +02:00
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Jeroen Bakker self-assigned this 2022-08-02 08:00:05 +02:00
Member

Assign to me for bisecting, and making an example file.

Assign to me for bisecting, and making an example file.
Member

Added subscribers: @HooglyBoogly, @JacquesLucke

Added subscribers: @HooglyBoogly, @JacquesLucke
Member

Issue is that the iuser->framenr of the NodeTextureImage isn't updated when in a node-group. Doesn't seem to be related to eevee/viewport.
Most likely to be introduced by D14957

think that the issue is that update_has_image_animation assumes that the group nodes are always evaluated before the main shader tree.
@JacquesLucke, @HooglyBoogly is it ok to appoint this one to one of you?

I would add a flag if the evaluation is 'up-to-date' but not sure what the definition is.

index be087c0b2d4..257002dfefd 100644
    - a/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc
+++ b/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc
@@ -1106,6 +1106,8 @@ void DepsgraphNodeBuilder::build_animation_images(ID *id)
 has_image_animation = true;

}
}

+  printf("%s %d\n", __func__, has_image_animation);
+  has_image_animation = ELEM(GS(id->name), ID_MA, ID_WO);
 

if (has_image_animation || BKE_image_user_id_has_animation(id)) {
ID *id_cow = get_cow_id(id);

diff --git a/source/blender/depsgraph/intern/builder/deg_builder_relations.cc b/source/blender/depsgraph/intern/builder/deg_builder_relations.cc
index f36d94c7563..18699349a7d 100644
    - a/source/blender/depsgraph/intern/builder/deg_builder_relations.cc
+++ b/source/blender/depsgraph/intern/builder/deg_builder_relations.cc
@@ -1,4 +1,4 @@
- /* SPDX-License-Identifier: GPL-2.0-or-later
+/* SPDX-License-Identifier: GPL-2.0-or-laterZ
  * Copyright 2013 Blender Foundation. All rights reserved. */
 
 /** \file
@@ -1487,6 +1487,8 @@ void DepsgraphRelationBuilder::build_animation_images(ID *id)
 has_image_animation = true;

}
}

+  printf("%s %d\n", __func__, has_image_animation);
+  has_image_animation = ELEM(GS(id->name), ID_MA, ID_WO);
 

if (has_image_animation || BKE_image_user_id_has_animation(id)) {
OperationKey image_animation_key(```


Issue is depsgraph related. the relations aren't added so not updated.
Issue is that the `iuser->framenr` of the `NodeTextureImage` isn't updated when in a node-group. Doesn't seem to be related to eevee/viewport. Most likely to be introduced by [D14957](https://archive.blender.org/developer/D14957) think that the issue is that `update_has_image_animation` assumes that the group nodes are always evaluated before the main shader tree. @JacquesLucke, @HooglyBoogly is it ok to appoint this one to one of you? I would add a flag if the evaluation is 'up-to-date' but not sure what the definition is. ```diff --git a/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc b/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc index be087c0b2d4..257002dfefd 100644 - a/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc +++ b/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc @@ -1106,6 +1106,8 @@ void DepsgraphNodeBuilder::build_animation_images(ID *id) ``` has_image_animation = true; } } ``` + printf("%s %d\n", __func__, has_image_animation); + has_image_animation = ELEM(GS(id->name), ID_MA, ID_WO); ``` if (has_image_animation || BKE_image_user_id_has_animation(id)) { ID *id_cow = get_cow_id(id); ``` diff --git a/source/blender/depsgraph/intern/builder/deg_builder_relations.cc b/source/blender/depsgraph/intern/builder/deg_builder_relations.cc index f36d94c7563..18699349a7d 100644 - a/source/blender/depsgraph/intern/builder/deg_builder_relations.cc +++ b/source/blender/depsgraph/intern/builder/deg_builder_relations.cc @@ -1,4 +1,4 @@ - /* SPDX-License-Identifier: GPL-2.0-or-later +/* SPDX-License-Identifier: GPL-2.0-or-laterZ * Copyright 2013 Blender Foundation. All rights reserved. */ /** \file @@ -1487,6 +1487,8 @@ void DepsgraphRelationBuilder::build_animation_images(ID *id) ``` has_image_animation = true; } } ``` + printf("%s %d\n", __func__, has_image_animation); + has_image_animation = ELEM(GS(id->name), ID_MA, ID_WO); ``` if (has_image_animation || BKE_image_user_id_has_animation(id)) { OperationKey image_animation_key(``` ``` Issue is depsgraph related. the relations aren't added so not updated.
Jeroen Bakker removed their assignment 2022-08-02 10:26:45 +02:00
Member

Added subscriber: @Wassily

Added subscriber: @Wassily
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Did the bisect for completeness and yes, it was caused by f517b3a295

@JacquesLucke : mind checking once again?

Did the bisect for completeness and yes, it was caused by f517b3a295 @JacquesLucke : mind checking once again?

This issue was referenced by 95464a842c

This issue was referenced by 95464a842cc19efa534d1dacd5fbe7cc5b9fcf52
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2022-08-23 11:55:37 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99932
No description provided.