Fix T99932: video in node group does not play